--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nginx:
     build:
@@ -17,6 +15,7 @@ services:
       - ./certbot/www:/var/www/certbot:ro
       - ./certbot/conf:/etc/letsencrypt:ro
       - ./logs/nginx:/var/log/nginx
+      - ./cache/nginx:/var/cache/nginx
     environment:
       - BUBBLE_DOMAIN=${BUBBLE_DOMAIN}
       - DOMAIN=${DOMAIN}
@@ -67,7 +66,7 @@ services:
     container_name: bubble-proxy-monitor
     restart: unless-stopped
     volumes:
-      - ./monitor:/app:ro
+      - ./monitor:/app
       - ./logs/monitor:/app/logs
     environment:
       - DOMAIN=${DOMAIN}
