--- a/nginx/conf.d/default.conf.template
+++ b/nginx/conf.d/default.conf.template
@@ -1,6 +1,8 @@
 upstream bubble_backend {
     server ${BUBBLE_DOMAIN}:443;
     keepalive 32;
+    keepalive_requests 1000;
+    keepalive_timeout 60s;
 }
 
 server {
@@ -24,26 +26,22 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name ${DOMAIN};
 
     ssl_certificate /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
-    
+
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers off;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
     ssl_session_tickets off;
-    
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    ssl_trusted_certificate /etc/letsencrypt/live/${DOMAIN}/chain.pem;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
 
+    add_header Alt-Svc "clear" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
@@ -57,84 +55,147 @@ server {
         add_header Content-Type text/plain;
     }
 
+    # Статика — кэшируем
+    location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        proxy_pass https://bubble_backend;
+        proxy_ssl_server_name on;
+        proxy_ssl_name ${BUBBLE_DOMAIN};
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+
+        proxy_set_header Host ${BUBBLE_DOMAIN};
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # GeoIP: страна пользователя
+        proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
+        proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
+
+        proxy_hide_header Alt-Svc;
+
+        proxy_cache bubble_cache;
+        proxy_cache_valid 200 1h;
+        proxy_cache_valid 404 1m;
+        proxy_cache_use_stale error timeout updating;
+        add_header X-Cache-Status $upstream_cache_status;
+
+        proxy_buffering on;
+        proxy_buffer_size 8k;
+        proxy_buffers 16 8k;
+
+        expires 1h;
+        add_header Cache-Control "public, immutable";
+
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 10s;
+        proxy_read_timeout 10s;
+    }
+
+    # telegram-web-app.js
+    location ~ ^/(telegram-web-app\.js|telegram-web-app\.min\.js) {
+        proxy_pass https://bubble_backend;
+        proxy_ssl_server_name on;
+        proxy_ssl_name ${BUBBLE_DOMAIN};
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+
+        proxy_set_header Host ${BUBBLE_DOMAIN};
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # GeoIP: страна пользователя
+        proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
+        proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
+
+        proxy_hide_header Alt-Svc;
+
+        proxy_cache bubble_cache;
+        proxy_cache_valid 200 1h;
+        add_header X-Cache-Status $upstream_cache_status;
+
+        add_header Access-Control-Allow-Origin "*" always;
+        add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type" always;
+
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 10s;
+        proxy_read_timeout 10s;
+    }
+
+    # API
+    location ~ ^/api/ {
+        limit_req zone=api burst=20 nodelay;
+
+        proxy_pass https://bubble_backend;
+        proxy_ssl_server_name on;
+        proxy_ssl_name ${BUBBLE_DOMAIN};
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+
+        proxy_set_header Host ${BUBBLE_DOMAIN};
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # GeoIP: страна пользователя
+        proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
+        proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
+
+        proxy_hide_header Alt-Svc;
+
+        proxy_buffering on;
+        proxy_buffer_size 8k;
+        proxy_buffers 16 8k;
+
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 15s;
+        proxy_read_timeout 15s;
+    }
+
+    # Всё остальное (HTML, WebSocket)
     location / {
         proxy_pass https://bubble_backend;
         proxy_ssl_server_name on;
+        proxy_ssl_name ${BUBBLE_DOMAIN};
         proxy_ssl_protocols TLSv1.2 TLSv1.3;
-        
-        # КРИТИЧНО: передача реального IP клиента
+
+        proxy_http_version 1.1;
+
+        proxy_set_header Host ${BUBBLE_DOMAIN};
+
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
         
-        # GeoIP: передача страны пользователя
+        # GeoIP: страна пользователя
         proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
         proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
-        
-        # Host заголовок
-        proxy_set_header Host ${BUBBLE_DOMAIN};
-        
-        # WebSocket support
-        proxy_http_version 1.1;
+
+        # WebSocket
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        
+
         proxy_set_header User-Agent $http_user_agent;
         proxy_set_header Accept $http_accept;
         proxy_set_header Accept-Language $http_accept_language;
         proxy_set_header Accept-Encoding $http_accept_encoding;
-        proxy_set_header Referer $http_referer;
-        
+        proxy_set_header Referer https://${BUBBLE_DOMAIN};
+
         proxy_set_header Cookie $http_cookie;
         proxy_pass_header Set-Cookie;
-        
-        proxy_buffering off;
-        proxy_request_buffering off;
-        
+
+        proxy_hide_header Alt-Svc;
+
+        proxy_buffering on;
+        proxy_buffer_size 8k;
+        proxy_buffers 16 8k;
+
         proxy_redirect off;
-        
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-    }
 
-    location ~ ^/(telegram-web-app\.js|telegram-web-app\.min\.js) {
-        proxy_pass https://bubble_backend;
-        proxy_ssl_server_name on;
-        
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host ${BUBBLE_DOMAIN};
-        
-        add_header Access-Control-Allow-Origin "*" always;
-        add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Content-Type" always;
-        
-        proxy_cache_valid 200 1h;
-        
-        proxy_connect_timeout 30s;
-        proxy_send_timeout 30s;
-        proxy_read_timeout 30s;
-    }
-
-    location ~ ^/api/ {
-        limit_req zone=api burst=20 nodelay;
-        
-        proxy_pass https://bubble_backend;
-        proxy_ssl_server_name on;
-        
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host ${BUBBLE_DOMAIN};
-        
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        
-        proxy_connect_timeout 30s;
+        proxy_connect_timeout 10s;
         proxy_send_timeout 30s;
         proxy_read_timeout 30s;
     }
