--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
 
 events {
-    worker_connections 2048;
+    worker_connections 1024;
     use epoll;
     multi_accept on;
 }
@@ -15,12 +15,15 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # GeoIP для определения страны
+    # GeoIP2 база для определения страны
     geoip2 /usr/share/GeoIP/GeoLite2-Country.mmdb {
         auto_reload 5m;
         $geoip2_data_country_code country iso_code;
         $geoip2_data_country_name country names en;
     }
+
+    resolver 8.8.8.8 8.8.4.4 valid=30s;
+    resolver_timeout 5s;
 
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
@@ -34,12 +37,14 @@ http {
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
-    keepalive_requests 100;
+    keepalive_requests 1000;
     types_hash_max_size 2048;
     client_max_body_size 100M;
     client_body_buffer_size 128k;
     
     server_tokens off;
+
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=bubble_cache:10m max_size=50m inactive=5m use_temp_path=off;
 
     gzip on;
     gzip_vary on;
@@ -50,15 +55,6 @@ http {
                application/rss+xml font/truetype font/opentype 
                application/vnd.ms-fontobject image/svg+xml;
     gzip_disable "msie6";
-
-    proxy_connect_timeout 60s;
-    proxy_send_timeout 60s;
-    proxy_read_timeout 60s;
-
-    proxy_buffering on;
-    proxy_buffer_size 4k;
-    proxy_buffers 8 4k;
-    proxy_busy_buffers_size 8k;
 
     limit_req_zone $binary_remote_addr zone=general:10m rate=30r/s;
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
