--- a/nginx/conf.d/default.conf.template
+++ b/nginx/conf.d/default.conf.template
@@ -61,12 +61,6 @@ server {
 
     # Статика — кэшируем
     location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        # Скрываем CORS от Bubble
-        proxy_hide_header Access-Control-Allow-Origin;
-        proxy_hide_header Access-Control-Allow-Methods;
-        proxy_hide_header Access-Control-Allow-Headers;
-        
-        # Наши CORS
         add_header 'Access-Control-Allow-Origin' '*' always;
 
         proxy_pass https://bubble_backend;
@@ -80,7 +74,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # GeoIP: страна пользователя
         proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
         proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
 
@@ -106,11 +99,6 @@ server {
 
     # telegram-web-app.js
     location ~ ^/(telegram-web-app\.js|telegram-web-app\.min\.js) {
-        # Скрываем CORS от Bubble
-        proxy_hide_header Access-Control-Allow-Origin;
-        proxy_hide_header Access-Control-Allow-Methods;
-        proxy_hide_header Access-Control-Allow-Headers;
-        
         add_header Access-Control-Allow-Origin "*" always;
         add_header Access-Control-Allow-Methods "GET, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Content-Type" always;
@@ -126,7 +114,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # GeoIP: страна пользователя
         proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
         proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
 
@@ -143,13 +130,6 @@ server {
 
     # API
     location ~ ^/api/ {
-        # Скрываем CORS от Bubble
-        proxy_hide_header Access-Control-Allow-Origin;
-        proxy_hide_header Access-Control-Allow-Methods;
-        proxy_hide_header Access-Control-Allow-Headers;
-        proxy_hide_header Access-Control-Max-Age;
-        
-        # CORS preflight для API
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
@@ -160,7 +140,6 @@ server {
             return 204;
         }
 
-        # CORS для обычных API запросов
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
@@ -179,7 +158,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # GeoIP: страна пользователя
         proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
         proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
 
@@ -194,32 +172,13 @@ server {
         proxy_read_timeout 15s;
     }
 
-    # Bubble системные запросы (init/data и т.д.) - ДОЛЖЕН БЫТЬ ПЕРЕД /version-test/
+    # Bubble системные запросы (init/data и т.д.)
     location ~ ^/version-test/api/1\.1/init/ {
-        # Скрываем CORS от Bubble
-        proxy_hide_header Access-Control-Allow-Origin;
-        proxy_hide_header Access-Control-Allow-Methods;
-        proxy_hide_header Access-Control-Allow-Headers;
-        
-        # CORS preflight
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://ru.vega-ex.com' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-            add_header 'Access-Control-Max-Age' 1728000 always;
-            add_header 'Content-Type' 'text/plain; charset=utf-8' always;
-            add_header 'Content-Length' 0 always;
-            return 204;
-        }
-
-        # CORS для обычных запросов
         add_header 'Access-Control-Allow-Origin' 'https://ru.vega-ex.com' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
 
-        # Проксируем на основной Bubble домен
         proxy_pass https://${BUBBLE_DOMAIN};
         proxy_ssl_server_name on;
         proxy_ssl_name ${BUBBLE_DOMAIN};
@@ -243,15 +202,8 @@ server {
         proxy_read_timeout 30s;
     }
 
-    # version-test пути (для Bubble workflows) - ПОСЛЕ /init/
+    # version-test пути (для Bubble workflows)
     location ~ ^/version-test/ {
-        # Скрываем CORS от Bubble
-        proxy_hide_header Access-Control-Allow-Origin;
-        proxy_hide_header Access-Control-Allow-Methods;
-        proxy_hide_header Access-Control-Allow-Headers;
-        proxy_hide_header Access-Control-Max-Age;
-        
-        # CORS preflight
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' 'https://ru.vega-ex.com' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -263,7 +215,6 @@ server {
             return 204;
         }
 
-        # CORS для обычных запросов
         add_header 'Access-Control-Allow-Origin' 'https://ru.vega-ex.com' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
@@ -281,7 +232,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # GeoIP
         proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
         proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
 
@@ -301,12 +251,6 @@ server {
 
     # Всё остальное (HTML, WebSocket)
     location / {
-        # Скрываем CORS от Bubble
-        proxy_hide_header Access-Control-Allow-Origin;
-        proxy_hide_header Access-Control-Allow-Methods;
-        proxy_hide_header Access-Control-Allow-Headers;
-        
-        # CORS preflight
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' 'https://ru.vega-ex.com' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -318,7 +262,6 @@ server {
             return 204;
         }
 
-        # CORS для обычных запросов
         add_header 'Access-Control-Allow-Origin' 'https://ru.vega-ex.com' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
@@ -339,11 +282,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
 
-        # GeoIP: страна пользователя
         proxy_set_header X-Forwarded-Country $geoip2_data_country_code;
         proxy_set_header X-Forwarded-Country-Name $geoip2_data_country_name;
 
-        # WebSocket
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
 
