--- a/nginx/conf.d/default.conf.template
+++ b/nginx/conf.d/default.conf.template
@@ -172,34 +172,15 @@ server {
         proxy_read_timeout 15s;
     }
 
-    # Bubble системные запросы (init/data и т.д.)
+    # Bubble системные запросы (init/data) - возвращаем пустой ответ с CORS
     location ~ ^/version-test/api/1\.1/init/ {
         add_header 'Access-Control-Allow-Origin' 'https://ru.vega-ex.com' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-
-        proxy_pass https://${BUBBLE_DOMAIN};
-        proxy_ssl_server_name on;
-        proxy_ssl_name ${BUBBLE_DOMAIN};
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-
-        proxy_set_header Host ${BUBBLE_DOMAIN};
-        proxy_set_header X-Real-IP $real_ip;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_set_header Cookie $http_cookie;
-        proxy_pass_header Set-Cookie;
-
-        proxy_buffering on;
-        proxy_buffer_size 8k;
-        proxy_buffers 16 8k;
-
-        proxy_connect_timeout 10s;
-        proxy_send_timeout 30s;
-        proxy_read_timeout 30s;
+        add_header 'Content-Type' 'application/json' always;
+        
+        return 200 '{}';
     }
 
     # version-test пути (для Bubble workflows)
